Fixed top bar alignment and added label to advanced features checkbox

--- a/components/topBar/TopBar.css
+++ b/components/topBar/TopBar.css
@@ -1,9 +1,7 @@
 .topbar-appBar {
   height: 60px;
-  justify-content: center;
 }
 
-.left
-{
-  margin-left: auto !important;
+.topbar-toolbar {
+  justify-content: space-between;
 }
